# ros_shortcut

./: README.md
basic_turtlesim/: package.xml  setup.cfg  setup.py
basic_turtlesim/basic_turtlesim/: turtle_pose_cmd.py
basic_turtlesim/launch/: basic_turtlesim.launch.py  basic_turtlesim.launch.xml
basic_turtlesim2/basic_turtlesim2/: turtle_param_cmd.py
basic_turtlesim3/: package.xml  setup.cfg  setup.py
basic_turtlesim3/launch/: basic_turtlesim3.launch.py  basic_turtlesim3.launch.xml
basic_turtlesim4/: package.xml  setup.py
basic_turtlesim4/basic_turtlesim4/: multi_spawn_server.py  turtle_info_pub.py
basic_turtlesim4/launch/: basic_turtlesim4.launch.py  basic_turtlesim4.launch.xml
basic_turtlesim4_msgs/: CMakeLists.txt  package.xml
basic_turtlesim4_msgs/srv/: MultiSpawn.srv
pinky_description/urdf/: pinky_gz.urdf.xacro
pinky_emotion/: package.xml  setup.py
pinky_emotion/pinky_emotion/: emotion_server.py  pinky_lcd.py
pinky_gz_sim/: CMakeLists.txt  package.xml
pinky_gz_sim/launch/: launch_sim.launch.xml
pinky_gz_sim/params/: pinky_bridge.yaml
pinky_gz_sim/plugins/: gz_lamp_control_plugin.cpp  gz_lamp_control_plugin.hpp
pinky_gz_sim/scripts/: lamp_server.py  range_sensors.py
src/basic_turtlesim/: package.xml  setup.py
src/basic_turtlesim/basic_turtlesim/: turtle_service_client.py
src/basic_turtlesim2/: package.xml  setup.cfg  setup.py
src/basic_turtlesim3/: package.xml  setup.py
src/basic_turtlesim4/: package.xml  setup.cfg  setup.py
src/basic_turtlesim4_msgs/: package.xml
src/urdf_basic/: package.xml  setup.py
src/urdf_basic/urdf/: cartpole.urdf
urdf_basic/: package.xml  setup.cfg
urdf_basic/launch/: cartpole_gazebo.launch.py  cartpole_web.launch.xml
urdf_basic/urdf_basic/: joint_state_plotter.py  web_monitor.py
(+7 files in other folders)
